# tauri-plugin-machine-uid

./: Cargo.toml  README.md  package.json
ios/: Package.swift
ios/Sources/: MachineUidPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
